# VFXEPOCH

./: .travis.yml  CMakeLists.txt  CMakeLists.txt~  CNAME  LICENSE  ReadMe.md  ReadMe.txt  cleanup.sh  setup.sh
docs/: Notes.md
examples/: CMakeLists.txt
examples/Common/: Helpers.cpp  Helpers.h  VisualizerHelpers.cpp  VisualizerHelpers.h  VisualizerHelpers_OpenGL.cpp  VisualizerHelpers_OpenGL.h
examples/examiner/: main.cpp
examples/general_test/: CMakeLists.txt  Helpers.cpp  Helpers.h  main.cpp
examples/smoke/: Helpers.cpp  Helpers.h  main.cpp
examples/smoke/bak/: Helpers.h  main.cpp
examples/test/: Helpers.h  main.cpp
examples/viz2D/: main.cpp
examples/vortex_rings_2d/: main.cpp
examples/write_alembic/: ReadMe  ReadMe~  main.cpp
external_libs/: CMakeLists.txt
external_libs/Alembic/Util/: Config.h
external_libs/Alembic/lib/: libAlembic.so.1.7
external_libs/Alembic/lib/cmake/: AlembicConfigVersion.cmake  AlembicTargets-noconfig.cmake  AlembicTargets.cmake
external_libs/DWA/: ReadMe
external_libs/OpenEXR/libs/: IlmBase.pc  libHalf.la  libHalf.so.12.0.0  libIex-2_2.la  libIex-2_2.so.12.0.0  libIexMath-2_2.la  libIexMath-2_2.so.12.0.0  libIlmImfUtil-2_2.so.22.0.0  libIlmThread-2_2.la  libIlmThread-2_2.so.12.0.0  libImath-2_2.la  libImath-2_2.so.12.0.0
include/fluids/euler/: SIM_Base.h  SIM_EulerGAS.h
include/fluids/lbm/: SIM_LBM.h
include/utl/: UTL_Analysis.h  UTL_General.h  UTL_Grid.h  UTL_LinearSolvers.h  UTL_Matrix.h  UTL_Vector.h
include/utl/Common/: Helpers.h
include/utl/PCGSolver/: pcg_solver.h  util.h  vec.h
source/: CMakeLists.txt
source/fluids/euler/: SIM_Base.h  SIM_EulerGAS.cpp  SIM_EulerGAS.h  SIM_Gas.cpp  SIM_Gas.h  SIM_Mac.cpp  SIM_Mac.h
source/fluids/lbm/: SIM_LBM.cpp  SIM_LBM.h
source/utl/: UTL_Analysis.cpp  UTL_Analysis.h  UTL_General.cpp  UTL_General.h  UTL_Grid.h  UTL_Helpers.cpp  UTL_Helpers.h  UTL_LinearSolvers.cpp  UTL_LinearSolvers.h  UTL_Matrix.h  UTL_Vector.h
source/utl/PCGSolver/: ReadMe.txt  sparse_matrix.h  util.h
