INSTALL(
  DIRECTORY ${CMAKE_SOURCE_DIR}/external_libs/Eigen
  DESTINATION ${CMAKE_SOURCE_DIR}/include
)

FILE(GLOB_RECURSE OPENEXR_HEADERS ${CMAKE_SOURCE_DIR}/external_libs/OpenEXR/*.h)
INSTALL(
  FILES ${OPENEXR_HEADERS} DESTINATION ${CMAKE_SOURCE_DIR}/include/OpenEXR/
)

INSTALL(
  DIRECTORY ${CMAKE_SOURCE_DIR}/external_libs/Alembic
  DESTINATION ${CMAKE_SOURCE_DIR}/include
)
