FILE(GLOB_RECURSE VFXEpoch_SRC "fluids/*.h" "fluids/*.cpp" "utl/*.h" "utl/*.cpp")
add_library(VFXEpoch STATIC ${VFXEpoch_SRC})

INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../include/ FILES_MATCHING PATTERN "*.h"
)

INSTALL(
  TARGETS VFXEpoch
  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../vfxepoch_libs/
)
